# vook_web_v2

./: .gitignore  index.html  pyproject.toml
config/: settings.py  urls.py
css/: main.css
vook_web/: apps.py  choice.py  forms.py  urls.py  views.py
vook_web/static/css/: main.css
vook_web/static/scripts/libs/: tabs.js
vook_web/static/styles/: loader.css  loader.css.map  loader.scss  style.css  style.css.map  style.scss
vook_web/static/styles/globals/: _index.scss  _variables.scss  _variables__article.scss
vook_web/static/styles/pages/: _about.scss  _article.scss  _community.scss  _home.scss  _search.scss
vook_web/static/styles/parts/: _button.scss  _common.scss  _image-slide.scss  _tabs.scss
vook_web/templates/vook_web/: about.html  article.html  base.html  community.html  index.html  product_page.html  search.html
