[tool.poetry]
name = "vook_web_v2"
version = "0.1.0"
description = ""
authors = ["atsushimemet <noap3b69n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
gunicorn = "^20.1.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
